A.F.I..PS. [ZBXNEXT-1241] added host inventory mode setting for new and discovered hosts (Gunars, Sasha, wiper)
...G...... [ZBXNEXT-494] added support for proc.cpu.util key on Linux and Solaris platforms (wiper)
A.F....... [ZBX-1357] updated Czech and Japanese translations; thanks to Zabbix translators (Richlv)

Bug fixes:
A.F....... [ZBX-9810] fixed trigger prototype expression inheritance incorrectly assigning an invalid expression to child objects and trigger expression test popup displaying a missing class (Ivo)
.......PS. [ZBX-7847] added functionality that stops polling inactive ipmi hosts (igors)
...G...... [ZBX-9430] fixed Windows eventlog item incorrectly interpreting 0x00000103 return value as an error (wiper)
..F....... [ZBXNEXT-2662] fixed a map element editing form (Sasha)
..F.I..... [ZBXNEXT-2662] fixed possibility to change the colours of the trigger severities (Sasha)
..F....... [ZBXNEXT-2662] fixed layout of the checkboxes with labels (Sasha)
..F....... [ZBXNEXT-2662] fixed layout of the host inventory form (Sasha)
..F....... [ZBXNEXT-2662] fixed editind of medias in the user form (Sasha)
..F....... [ZBXNEXT-2662] fixed saving of the collapsible widgets in the "Event detais" and "Global search" pages (Sasha)
..F....... [ZBXNEXT-2662] fixed displaying of the vertical headers under IE10, IE11 and Edge (Sasha)
..F....... [ZBXNEXT-2662] fixed displaying of the eventlog severities (Sasha)
.......PS. [ZBX-9655] fixed crash if MYSQL connection object initialization failed (wiper)
........S. [ZBX-9667] fixed disabled triggers or triggers having disabled hosts or items affecting trigger dependency calculations (wiper)
A......... [ZBX-9738] fixed deletion of related action operations when deleting a host group (Gunars)
..F....... [ZBX-9625] fixed interface list bug in host form (Gunars)
..F....... [ZBX-9804] fixed monitoring graph scroller and calendar (Gunars)
..F....... [ZBX-9607] fixed step form in web scenario (Gunars, Sasha)